crates/nexus-store/tests/compile_fail/stream_decoder_build_without_codec.stderr
error[E0599]: no method named `build` found for struct `DecoderBuilder<Empty, nexus_store::stream::NeedsCodec, NoUpcaster>` in the current scope
  --> tests/compile_fail/stream_decoder_build_without_codec.rs:28:34
   |
28 |     let _: () = stream.decoder().build::<()>();
   |                                  ^^^^^ method not found in `DecoderBuilder<Empty, nexus_store::stream::NeedsCodec, NoUpcaster>`
   |
   = note: the method was found for
           - `DecoderBuilder<S, WithBorrowingCodec<'a, C>, NoUpcaster>`
           - `DecoderBuilder<S, WithBorrowingCodec<'a, C>, WithUpcaster<'a, U>>`
           - `DecoderBuilder<S, WithCodec<'a, C>, NoUpcaster>`
           - `DecoderBuilder<S, WithCodec<'a, C>, WithUpcaster<'a, U>>`
